fixing dropdown alignment

--- a/css/costStyle.css
+++ b/css/costStyle.css
@@ -70,7 +70,6 @@ button {
 .dropdown {
   position: relative;
   display: inline-block;
-  padding-right: 50px;
 }
 
 /* Dropdown Content (Hidden by Default) */
